<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioActivity">

    <ImageView
        android:layout_margin="@dimen/marginMercadApp"
        android:layout_width="@dimen/widthMercadApp"
        android:layout_height="@dimen/heightMercadApp"
        android:layout_gravity="left"
        android:importantForAccessibility="no"
        android:src="@drawable/mercad_app"
        android:background="@drawable/rounded_background"
        tools:ignore="RtlHardcoded" />

    <TextView
        style="@style/TextViewTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inicio"
        android:gravity="center"
        />

    <ImageView
        android:layout_width="330dp"
        android:layout_height="260dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:importantForAccessibility="no"
        android:src="@drawable/mercado"
        android:layout_margin="10sp"
        android:alpha="0.3"/>

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/btnHistorico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/historico"/>

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/btnInformes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/informes"/>

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/btnUsuarios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usuarios"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:ignore="ContentDescription"
        android:layout_margin="15sp"
        />

</LinearLayout>