<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription,UnusedAttribute, HardcodedText"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="298dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:importantForAccessibility="no"
        android:src="@drawable/mercad_app"
        />

    <TextView
        style="@style/TextViewTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:gravity="center"
        />

    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/txtUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="admin"
        android:gravity="center"
        android:hint="Usuario"
        android:inputType="text"/>

    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/txtContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:gravity="center"
        android:hint="Contraseña"
        android:inputType="textPassword"/>

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/btnIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingresar"/>

    <TextView
        style="@style/TextViewNormalStyle"
        android:id="@+id/btnNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autoLink="none"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/nuevo_usuario"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="italic|normal" />

</LinearLayout>